[package]
name = "clubcard-crlite"
authors = ["John M. Schanck <jschanck@mozilla.com>"]
version = "0.6.0"
license = "MPL-2.0"
repository = "https://github.com/mozilla/clubcard-crlite/"
description = "An instantiation of Clubcard for use in CRLite"
edition = "2024"
# Keep at or below Firefox's Rust requirement (currently 1.90).
rust-version = "1.85"

[dependencies]
base64 = "0.22"
bincode = { version = "1.3", optional = true }
clubcard = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }

[features]
default = ["bincode", "sha2"]
bincode = ["dep:bincode"]
builder = ["dep:serde_json", "sha2", "clubcard/builder"]
sha2 = ["dep:sha2"]

[dev-dependencies]
x509-parser = { version = "0.16", features = ["verify"] }

[[example]]
name = "query"
required-features = ["sha2"]
